--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Exercise JS</title>
 </head>
 <body>
-    <script type="text/javascript" src="./js/script.js"></script>
-    
+    <h2 id="text">La tua nuova password &eacute; NomeCognomeColorePreferito</h2>
+    <script type="text/javascript" src="./js/script.js"></script> 
 </body>
 </html>
